# rgs-types

./: .gitignore  CHANGELOG.md  README.md  REQUIREMENTS.md  gen_test_cases.sh  install.sh  pyproject.toml
docs/: Requirements.md  Testing_Methodologies.md
src/rgs_types/: __init__.py  main.py  parser.py  resolver.py  schema_models.py
src/rgs_types/generators/: base.py  cpp.py  json_data.py  python.py  typescript.py  utils.py
src/rgs_types/generators/templates/: cpp.hpp.j2  python.py.j2  typescript.ts.j2
test_cases/10_complex_arrays/: schema.json
test_cases/11_evolution/: schema.json
test_cases/1_simple/: schema.json
test_cases/2_nested/: schema.json
test_cases/3_arrays/: schema.json
test_cases/4_enums/: schema.json
test_cases/5_optional_defaults/: schema.json
test_cases/6_validation/: schema.json
test_cases/7_refs/: schema.json
test_cases/8_read_write/: schema.json
test_cases/9_namespacing/: schema.json
tests/: conftest.py  test_cli.py  test_cpp_generator.py  test_integration.py  test_json_data_generator.py  test_parser.py  test_python_generator.py  test_resolver.py  test_schema_validation.py  test_typescript_generator.py
