[tool.poetry]
name = "rgs_types"
version = "0.4.2"
description = "A CLI tool to generate cross-platform data types (C++, Python, TypeScript) from JSON Schema."
authors = ["Tommy <tommy@rogorous.co>"]
readme = "README.md"
packages = [{include = "rgs_types", from = "src"}]

[tool.poetry.dependencies]
python = "^3.10"
typer = {extras = ["all"], version = "^0.12.0"}
click = "<8.2.0"
jinja2 = "^3.1.0"
pydantic = "^2.0.0"
rich = "^13.0.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^23.0.0"
isort = "^5.0.0"
mypy = "^1.0.0"
pyyaml = "^6.0.3"
lark = "^1.3.1"
hypothesis = "^6.0.0"
hypothesis-jsonschema = "^0.23.0"
jsonschema = "^4.0.0"
pytest-xdist = "^3.0.0"

[tool.pytest.ini_options]
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
]

[tool.pylance]
python.analysis.extraPaths = ["src"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
rgs-gen = "rgs_types.main:app"